--- a/stylemediaqueries.css
+++ b/stylemediaqueries.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 @media only screen and (max-width: 600px) {
     /* Styles for phones */
     .navbar i{
@@ -468,7 +473,7 @@
         background-color: rgb(81, 187, 164);
         position: fixed;
         top: 0;
-        right: 0;
+        right:-200px;
         width: 200px;
         height: 100vh;
         padding-top: 50px;
