--- a/stylemediaqueries.css
+++ b/stylemediaqueries.css
@@ -4,6 +4,9 @@
 }
 @media only screen and (max-width: 600px) {
     /* Styles for phones */
+    *{
+        overflow-x: hidden;
+    }
     .logo-container .img-logo img{
         height: 55px;
     }
