--- a/stylemediaqueries.css
+++ b/stylemediaqueries.css
@@ -657,3 +657,11 @@
         height: 400px;
     }
 }
+
+@media only screen and (min-width: 1000px) and (max-width: 1500px) {
+    /* Styles for laptops and desktops */
+    .consult-doctor-wrapper{
+        display: flex;
+        flex-direction: column;
+    }
+}
