--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ header{
     border-radius: 5px;
     cursor: pointer;
 }
-#services:hover{
+#data:hover{
     background-color: rgb(81, 187, 164);
     color: white;
     border-radius: 5px;
@@ -309,6 +309,139 @@ header{
 .photo{
     width: fit-content;
 }
+/*Covid19 data section*/
+
+.covid-data{
+    padding: 95px 0px;
+}
+.services-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 20px;
+    
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex: 0 1 calc(33.33% - 20px);
+    background-color: #fff;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card h2 {
+    color: #333;
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+}
+
+.card .chart-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.card .region-control {
+    margin-bottom: 15px;
+}
+
+.card ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.card ul li {
+    margin-bottom: 10px;
+}
+
+.card a {
+    text-decoration: none;
+    color: #0066cc;
+}
+.total{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #de647d;
+    height: 12rem;
+    width: 12rem;
+    border-radius: 5px;
+}
+.active{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #f02a2a;
+    height: 12rem;
+    width: 12rem;
+    border-radius: 5px;
+}
+.recovered{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #22927c;
+    height: 12rem;
+    width: 12rem;
+    border-radius: 5px;
+}
+.death{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #202125;
+    height: 12rem;
+    width: 12rem;
+    border-radius: 5px;
+}
+.card a:hover {
+    text-decoration: underline;
+}
+#regional-data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.region-data{
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    width: 80%;
+    justify-content: space-around;
+    
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        flex: 0 1 calc(50% - 20px);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .card {
+        flex: 1 0 calc(100% - 20px);
+    }
+}
+
+
+
+
 .doctor{
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3); /* Shadow below (v-offset: 5px) */
     width: fit-content;
