--- a/styles.css
+++ b/styles.css
@@ -370,6 +370,7 @@ header{
     color: #0066cc;
 }
 .total{
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -378,6 +379,10 @@ header{
     height: 12rem;
     width: 12rem;
     border-radius: 5px;
+    transition: transform 0.3s ease-in-out;
+}
+.total:hover{
+    transform: scale(1.05);
 }
 .active{
     display: flex;
@@ -388,6 +393,10 @@ header{
     height: 12rem;
     width: 12rem;
     border-radius: 5px;
+    transition: transform 0.3s ease-in-out;
+}
+.active:hover{
+    transform: scale(1.05);
 }
 .recovered{
     display: flex;
@@ -398,6 +407,10 @@ header{
     height: 12rem;
     width: 12rem;
     border-radius: 5px;
+    transition: transform 0.3s ease-in-out;
+}
+.recovered:hover{
+    transform: scale(1.05);
 }
 .death{
     display: flex;
@@ -408,6 +421,10 @@ header{
     height: 12rem;
     width: 12rem;
     border-radius: 5px;
+    transition: transform 0.3s ease-in-out;
+}
+.death:hover{
+    transform: scale(1.05);
 }
 .card a:hover {
     text-decoration: underline;
