--- a/stylemediaqueries.css
+++ b/stylemediaqueries.css
@@ -288,6 +288,7 @@
         
     }
     .total{
+        margin-top: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -610,6 +611,7 @@
         
     }
     .total{
+        margin-top: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
