--- a/styles.css
+++ b/styles.css
@@ -370,7 +370,6 @@ header{
     color: #0066cc;
 }
 .total{
-    margin-top: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -443,7 +442,49 @@ header{
     justify-content: space-around;
     
 }
+.region-control input{
+    height: 1.5rem;
+    width: 15rem;
+    border-radius: 8px;
+    border: royalblue 2px solid;
+    padding: 4px;
+}
+.country-submit-btn{
+}
+.country-submit-btn .country-btn{
+    margin-left: 1rem;
+    color: white;
+    background-color: rgb(81, 187, 164);
+    border-radius: 7px;
+    border: rgb(81, 187, 164) 2px solid;
+    height: 2.5rem;
+    width: 75px;
+    font-size: 12px;
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+.country-submit-btn .country-btn:hover{
+    color: rgb(81, 187, 164);
+    background-color: white;
 
+}
+.region-control .country-input-wrapper{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.educational-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.resources{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 @media screen and (max-width: 768px) {
     .card {
         flex: 0 1 calc(50% - 20px);
