--- a/stylemediaqueries.css
+++ b/stylemediaqueries.css
@@ -332,6 +332,16 @@
          border-radius: 10px;
         margin-bottom: 15px;
     }
+    .global-control .global{
+        border-radius: 5px;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        align-items: center;
+        justify-content: space-around;
+        
+    }
 }
 @media only screen and (min-width: 600px) and (max-width: 1000px) {
     /* Styles for tablets */
@@ -654,6 +664,16 @@
         width: 12rem;
          border-radius: 10px;
         margin-bottom: 15px;
+    }
+    .global-control .global{
+        border-radius: 5px;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        align-items: center;
+        justify-content: space-around;
+        
     }
 }
 
