--- a/styles.css
+++ b/styles.css
@@ -485,6 +485,18 @@ header{
     align-items: center;
     flex-direction: column;
 }
+
+/*Global covid data*/
+.global-control{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.global-control .global{
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+}
 @media screen and (max-width: 768px) {
     .card {
         flex: 0 1 calc(50% - 20px);
