--- a/styles.css
+++ b/styles.css
@@ -557,6 +557,73 @@ header{
 .wash-section1 img{
     height: 100%;
 }
+
+/*Covid news sections*/
+.news-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 20px;
+}
+
+.news-card {
+    width: 500px;
+    
+    background-color: #fff;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
+}
+
+.news-card:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.news-card img {
+    height: fit-content;
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-bottom: 2px solid #ddd;
+}
+
+.news-content {
+    padding: 15px;
+}
+
+.news-content h2 {
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.article-meta {
+    color: #777;
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+}
+
+.article-summary {
+    color: #555;
+    line-height: 1.4;
+    margin-bottom: 15px;
+}
+
+.read-more-link {
+    color: #0066cc;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    border-bottom: 2px solid #0066cc;
+}
+
+.read-more-link:hover {
+    text-decoration: none;
+    border-bottom: 2px solid #004080;
+}
+
 /* Footer */
 
 footer {
