--- a/styles.css
+++ b/styles.css
@@ -571,7 +571,7 @@ header{
     background-color: #fff;
     margin: 10px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 4px 8px rgba(0.1, 0.1, 0.1, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
 }
