--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ header{
     
 }
 h1{
-    font-size: 45px;
+    font-size: 60px;
 }
 .header h2{
     font-size: 35px;
@@ -576,6 +576,7 @@ header{
     border-radius: 10px;
     box-shadow: 4px 4px 8px rgba(0.1, 0.1, 0.1, 0.1);
     overflow: hidden;
+    border: #0066cc;
     transition: transform 0.3s ease-in-out;
 }
 
