--- a/stylemediaqueries.css
+++ b/stylemediaqueries.css
@@ -156,10 +156,12 @@
         display: flex;
         flex-direction: column;
         margin: 50px 0px;
+        gap: 30px;
     }
     .wash-wrapper .wash-section3{
         display: flex;
         flex-direction: column;
+        gap: 30px;
     }
     .section-wrappers{
         display: flex;
@@ -465,10 +467,12 @@
         display: flex;
         flex-direction: column;
         margin: 50px 0px;
+        gap: 30px;
     }
     .wash-wrapper .wash-section3{
         display: flex;
         flex-direction: column;
+        gap: 30px;
     }
     .section-wrappers{
         display: flex;
