--- a/styles.css
+++ b/styles.css
@@ -181,12 +181,15 @@ header{
     height: 50px;
     width: 175px;
     font-size: 18px;
-    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    background: linear-gradient(to right, rgb(81, 187, 164), white);
+    background-size: 200% 100%;
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,background-position 0.5s ease-in-out;
 }
 
 .prevent-btn .btn:hover{
     color: rgb(81, 187, 164);
     background-color: white;
+    background-position: -90% 0;
 
 }
 /*How to prevent section*/
@@ -249,11 +252,14 @@ header{
     height: 50px;
     width: 175px;
     font-size: 18px;
-    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    background: linear-gradient(to right, rgb(81, 187, 164), white);
+    background-size: 200% 100%;
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,background-position 0.5s ease-in-out;
 }
 .contact-btn .btn:hover{
     color: rgb(81, 187, 164);
     background-color: white;
+    background-position: -90% 0;
 
 }
 /*Prevent section*/
@@ -639,16 +645,18 @@ header{
     color: white;
     background-color: rgb(81, 187, 164);
     border-radius: 7px;
+    background: linear-gradient(to bottom, rgb(81, 187, 164), white);
     border: rgb(81, 187, 164) 2px solid;
+    background-size: 100% 200%;
     height: 50px;
     width: 175px;
     font-size: 18px;
-    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,background-position 0.5s ease-in-out;
 }
 .reload-btn .btn:hover{
     color: rgb(81, 187, 164);
     background-color: white;
-
+    background-position: 0% -90%;
 }
 /* Footer */
 
