adjusted flex gap

--- a/styles.css
+++ b/styles.css
@@ -570,6 +570,7 @@ header{
 .news-section {
     display: flex;
     flex-wrap: wrap;
+    gap: 50px   ;
     justify-content: space-evenly;
     padding: 20px;
 }
