updated news and links

--- a/stylemediaqueries.css
+++ b/stylemediaqueries.css
@@ -667,8 +667,8 @@
         color: #141a75;
     }
     .symptoms h4{
-        text-align: left;
-        margin-left: 70px;
+        text-align: center;
+        margin-left: 50px;
     }
     .prevent{
         padding: 95px 0px;
