--- a/styleTest.css
+++ b/styleTest.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'poppins', sans-serif;
     box-sizing: border-box;
+    overflow: hidden;
 }
 .body{
     background-color: #001e4d;
@@ -89,4 +90,12 @@
     width: 90%;
     max-width: 600px;
     margin:20px 0px ;
+}
+@keyframes anim1 {
+    from{
+        transform: translateX(200px);
+    }
+    to{
+        transform: translateX(0px);
+    }
 }
