--- a/styleTest.css
+++ b/styleTest.css
@@ -102,10 +102,12 @@
 @media (max-width: 800px) {
     /* Styles for extra small devices */
     .welcome{
-        max-height: fit-content;
+        height: 100%;
+        width: 100%;
         gap: 0px;
         margin: 0;
         padding: 0;
+        border-radius: 0px;
     }
     .text1{
         display: none;
