--- a/styleTest.css
+++ b/styleTest.css
@@ -102,15 +102,10 @@
 @media (max-width: 800px) {
     /* Styles for extra small devices */
     .welcome{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 50%;
-        width: 100%;
+        max-height: fit-content;
         gap: 0px;
         margin: 0;
         padding: 0;
-        border-radius: 0px;
     }
     .text1{
         display: none;
