--- a/styleTest.css
+++ b/styleTest.css
@@ -3,7 +3,7 @@
     padding: 0;
     font-family: 'poppins', sans-serif;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .body{
     background-color: #001e4d;
