--- a/styles.css
+++ b/styles.css
@@ -580,9 +580,8 @@ header{
     background-color: #fff;
     margin: 20px;
     border-radius: 10px;
-    box-shadow: 4px 4px 8px rgba(0.1, 0.1, 0.1, 0.1);
+    border: 1px solid black;
     overflow: hidden;
-    border: #0066cc;
     transition: transform 0.3s ease-in-out;
 }
 
@@ -592,7 +591,7 @@ header{
 }
 
 .news-card img {
-    height: fit-content;
+    height: 15rem;
     width: 100%;
     object-fit: cover;
     border-bottom: 2px solid #ddd;
