--- a/styles.css
+++ b/styles.css
@@ -719,3 +719,20 @@ footer ul li{
         margin-top: 0;
     }
 }
+/* Scrollbar Track */
+::-webkit-scrollbar {
+    width: 10px; /* Width of the entire scrollbar */
+    background-color: #f5f5f5; /* Background color of the scrollbar track */
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; /* Color of the scroll handle */
+    border-radius: 10px; /* Rounded corners of the handle */
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Darker color when hovered */
+  }
+  
